<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding"
    android:orientation="vertical" >

    <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:padding="5dip"
     android:layout_marginTop="5dip"
     android:layout_marginBottom="5dip"
     android:background="@drawable/image_bg" >
     
	     <ImageView 
			android:id="@+id/image_view_dialog_fragment_new_item_image"
			android:layout_width="200dp"
			android:layout_height="200dp" />
     
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/unidade_de_medida" />

        <Spinner
            android:id="@+id/spinner_dialog_fragment_new_item_measure_unit"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/nome" />

		<EditText
	        android:id="@+id/edit_text_dialog_fragment_new_item_name"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:inputType="text"
	        android:hint="@string/insira_o_nome" />

	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/valor" />

		<EditText
	        android:id="@+id/edit_text_dialog_fragment_new_item_value"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:inputType="numberDecimal"
	        android:hint="@string/insira_o_valor" />

    </LinearLayout>
    
</LinearLayout>